kubernetes/canary-releases/ecommerce-green-deployment.yaml
apiVersion: v1
kind: Service
metadata:
 name: ecommerce-green
 namespace: ecommerce
 annotations:
   service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
spec:
 selector:
   run: green
 ports:
   - protocol: TCP
     port: 3005
     targetPort: 3005
     name: http
 type: NodePort
 #type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ecommerce-green
 namespace: ecommerce
spec:
 selector:
   matchLabels:
     run: green
 template:
   metadata:
     labels:
       run: green
       app.kubernetes.io/version: "green"
   spec:
     containers:
     - args:
       - bash
       - -c
       - python3.8 manage.py collectstatic --no-input && gunicorn ecommerce.wsgi:application --bind 0.0.0.0:3005
       name: frontend
       image: nikhilgoenka/ecommerce-backend:kubernetes
       imagePullPolicy: Always
       ports:
       - containerPort: 3005
         protocol: TCP
